--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,12 @@
     
        <string name="drawer_open">TwoPDoist</string>
     <string name="drawer_close">TwoPDoist</string>
+    <string name="no_title">No Title</string>
+    <string name="title">Title</string>
+    <string name="edit_note">Edit Note</string>
+
+    <string name="save_menu_noteedit">Save</string>
+
+    <string name="delete_menu_noteedit">Delete</string>
 
 </resources>
